add links to all the cms

--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -26,12 +26,10 @@
       </div>
   </div>
 
-  <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
-    <div class="h1">Let's Build the future</div>
+  <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home && content">
+    <div class="h1" [innerHTML]="content.title.rendered"></div>
 
-    <p class="hero__tagline">
-      Beautiful SaaS product design and cutting-edge code for future-thinkers in the digital age.
-    </p>
+    <p class="hero__tagline" [innerHTML]="content.acf.strapline"></p>
 
     <div data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="margin-top--lg">
