--- a/src/app/pages/home/benefits/benefits.component.html
+++ b/src/app/pages/home/benefits/benefits.component.html
@@ -3,12 +3,12 @@
   <div class="row">
     <div class="col-md benefits__benefit" *ngFor="let benefit of benefits; let i = index" data-aos="fade-up" data-aos-duration="1000" [attr.data-aos-delay]="i * 100">
       <div class="text-center">
-        <img [src]="benefit.img" alt="" style="max-width: 150px">
+        <img [src]="benefit.image.url" alt="" style="max-width: 150px">
       </div>
 
       <div class="benefits__heading h3" aria-hidden="">{{benefit.title}}</div>
 
-      <p class="benefits__description">{{benefit.description}}</p>
+      <p class="benefits__description">{{benefit.text}}</p>
     </div>
   </div>
 
@@ -17,14 +17,14 @@
       <h3 class="sr-only">{{benefit.title}}</h3>
 
       <p>
-        {{benefit.description}}
+        {{benefit.text}}
       </p>
     </section>
   </div>
 
   <div class="home__cta" data-aos="fade-in">
     <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--black">
-      Let's build your legacy
+      <ng-content></ng-content>
     </a>
   </div>
 </div>
