--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -29,7 +29,7 @@
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home && content">
     <div class="h1" [innerHTML]="content.title.rendered"></div>
 
-    <p class="hero__tagline" [innerHTML]="content.acf.strapline"></p>
+    <p class="hero__tagline" [innerHTML]="content.acf.rendered"></p>
 
     <div data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="margin-top--lg">
