minor style updates and what we do uses acf

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,11 @@
     <div class="home__tagline-wrapper">
       <div data-aos="fade-in" data-aos-duration="1000">
         <h2 class="hidden-md-up home__tagline">
-          <em class="home__tagline-border" [innerHTML]="content.content.rendered"></em>
+          <em class="home__tagline-border" [innerHTML]="content.acf.what_we_do"></em>
         </h2>
         <p class="home__tagline hidden-md">
           <em appParallax [ratio]=".15" direction="horizontal" style="display: inline-block;"
-          class="home__tagline-border" [innerHTML]="content.content.rendered"></em>
+          class="home__tagline-border" [innerHTML]="content.acf.what_we_do"></em>
         </p>
       </div>
     </div>
