--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -21,9 +21,9 @@
             </ng-container>
           </ul>
         </section>
-        <section class="col-md text-right">
+        <section class="col-md footer__services">
           <header>
-            <h2 class="footer__title heading-3 text-right">Services</h2>
+            <h2 class="footer__title heading-3">Services</h2>
           </header>
           <ul class="list-unstyled">
             <ng-container *ngFor="let service of services">
