--- a/src/app/global/footer/footer.component.scss
+++ b/src/app/global/footer/footer.component.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/sass/settings/settings";
+@import "../../../assets/sass/tools/tools";
 
 .footer {
   background-color: $color-gray-dark;
@@ -12,6 +13,7 @@
     border-bottom-color: lighten($color-gray-dark, 15%);
     margin-bottom: 0;
     padding-bottom: $space-small;
+    text-align: left;
   }
 
   &__link {
@@ -33,6 +35,19 @@
   &__list-item {
     padding: 5px 0;
     border-bottom: 1px solid lighten($color-gray-dark, 15%);
+  }
+
+  &__services {
+    margin-top: $space-medium;
+
+    @include md {
+      text-align: right;
+      margin-top: 0;
+
+      .footer__title {
+        text-align: right;
+      }
+    }
   }
 
   blockquote {
