homepage and landing page

--- a/src/app/global/logo/logo.component.html
+++ b/src/app/global/logo/logo.component.html
@@ -6,6 +6,6 @@
     Jupiter&nbsp;and <div>the&nbsp;Giraffe</div>
   </div>
   <div class="logo__slogan" *ngIf="showSlogan">
-    A Branding Studio Out Of This World
+    A Web Studio Out Of This World
   </div>
 </header>
