--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,6 +33,8 @@
         {{homepageService.homepage.acf.we_are}}
       </app-we-are-component>
 
+      <app-pricing-component></app-pricing-component>
+
       <app-services-component *ngIf="servicesService.services" [services]="servicesService.services"></app-services-component>
     </div>
 
