--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="margin-top--lg">
-      <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
+      <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a FREE consultation</a>
     </div>
   </div>
 
@@ -33,7 +33,7 @@
 
     <div data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="margin-top--lg">
-          <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
+          <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a FREE consultation</a>
       </div>
     </div>
 
