--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -11,7 +11,10 @@
 @import "../../../node_modules/aos/dist/aos.css";
 
 // Font awesome
-@import "fontawesome/font-awesome";
+@import "fontawesome/fontawesome";
+@import "fontawesome/regular";
+@import "fontawesome/solid";
+@import "fontawesome/v4-shims";
 
 @import "settings/settings";
 @import "tools/tools";
