--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -19,7 +19,7 @@
   <div class="hero__main" *ngIf="funnel">
       <h1 data-aos="fade-in" data-aos-delay="200">1 hour free consultation</h1>
 
-      <p data-aos="fade-in" data-aos-delay="600">Kick start your digital products branding</p>
+      <p data-aos="fade-in" data-aos-delay="600">Kick start your digital product</p>
 
       <div class="text-center" data-aos="fade-up" data-aos-delay="1000">
         <a [routerLink]="'/contact'" class="btn btn--strategy">Book your free consultation</a>
