--- a/src/app/pages/home/pricing/pricing.component.html
+++ b/src/app/pages/home/pricing/pricing.component.html
@@ -54,7 +54,7 @@
           </ul>
 
           <div>
-            <a [routerLink]="['/contact']" class="btn btn--lg btn--outline">Contact us</a>
+            <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark">Contact us</a>
           </div>
         </div>
       </section>
