--- a/src/app/pages/home/pricing/pricing.component.html
+++ b/src/app/pages/home/pricing/pricing.component.html
@@ -13,7 +13,11 @@
           <h4 class="pricing__card-price pricing__card-price--large">£6k</h4>
 
           <p class="pricing__card-sticker">
-            <strong>Introductory Offer</strong>
+            <strong>Introductory offer</strong>
+          </p>
+
+          <p>
+            Got an app idea?
           </p>
 
           <ul class="pricing__checklist">
@@ -35,12 +39,20 @@
     <div class="col-md-6">
       <section class="pricing__card text-center">
         <header class="pricing__card-header">
-          <h3 class="pricing__card-title">SaaS Bespoke Package</h3>
+          <h3 class="pricing__card-title">SaaS Premium Package</h3>
         </header>
 
         <div class="pricing__card-body">
 
-          <h4 class="pricing__card-price">Contact us</h4>
+          <h4 class="pricing__card-price pricing__card-price--small">Contact us</h4>
+
+          <p class="pricing__card-sticker">
+            <strong>Bespoke experience</strong>
+          </p>
+
+          <p>
+            Build your ambitions and take on the world.
+          </p>
 
           <ul class="pricing__checklist">
             <li>Bespoke website + landing page UX/design/development</li>
