Feature/app packages (#114)
* homepage and landing page

* audit fix

* share image

* update sitemap

* update brand

* remove brand references

* fix pages

* fix images

* pricing

* update content

--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -12,14 +12,14 @@
       </div>
     </div>
     <div class="margin-top--lg">
-      <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
+      <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a FREE consultation</a>
     </div>
   </div>
 
   <div class="hero__main" *ngIf="funnel">
       <h1 data-aos="fade-in" data-aos-delay="200">1 hour free consultation</h1>
 
-      <p data-aos="fade-in" data-aos-delay="600">Kick start your digital products branding</p>
+      <p data-aos="fade-in" data-aos-delay="600">Kick start your digital product</p>
 
       <div class="text-center" data-aos="fade-up" data-aos-delay="1000">
         <a [routerLink]="'/contact'" class="btn btn--strategy">Book your free consultation</a>
@@ -33,7 +33,7 @@
 
     <div data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="margin-top--lg">
-          <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
+          <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a FREE consultation</a>
       </div>
     </div>
 
