update some tihngs

--- a/src/app/pages/home/we-are/we-are.component.html
+++ b/src/app/pages/home/we-are/we-are.component.html
@@ -2,24 +2,19 @@
     <h2 class="text-center" data-aos="fade-in">We are</h2>
     <!-- <img src="/assets/images/jupiter.svg" alt="" class="img-fluid we-are__img--small"> -->
 
-    <div class="row text-center" style="align-items: center;">
-      <div class="col-sm">
+    <div class="row text-center we-are__title" style="align-items: center;">
+      <div class="col">
         <h3 class="text-center" data-aos="fade-in" data-aos-delay="200">Half Devs</h3>
       </div>
-      <div class="col-sm">
-        <img src="/assets/images/jupiter.svg" alt="" class="img-fluid we-are__img">
-      </div>
-      <div class="col-sm">
+      <div class="col">
         <h3 class="text-center" data-aos="fade-in" data-aos-delay="400">Half Creatives</h3>
       </div>
-      <div class="col we-are__thinkers h3 margin-bottom--lg " data-aos="fade-in" data-aos-delay="800">
-        All Thinkers
+      <div class="col" data-aos="fade-in" data-aos-delay="800">
+        <h3>All Thinkers</h3>
       </div>
     </div>
 
     <div data-aos="fade-in" data-aos-delay="400" class="text-center">
-      <h3 class="text-center margin-top--lg padding-top--lg margin-bottom--lg padding-bottom--lg we-are__thinkers--large">All Thinkers</h3>
-
       <p style="max-width: 800px; margin: 0 auto;">
         <ng-content></ng-content>
       </p>
