--- a/src/app/pages/mvp-package/mvp-package.component.scss
+++ b/src/app/pages/mvp-package/mvp-package.component.scss
@@ -26,6 +26,8 @@
 
   &__email-submit {
     margin-left: 20px;
+    opacity: 1;
+    border: 1px solid $color-white;
   }
 
   .message {
@@ -44,5 +46,22 @@
     @include md {
       text-align: inherit;
     }
+  }
+
+  &__price--discount {
+    .mvp-package__full-price {
+      text-decoration: line-through;
+    }
+  }
+
+  &__full-price {
+    @include font-size($heading-2);
+    @include title-font();
+  }
+
+  &__discount {
+    display: inline-block;
+    margin-left: $space-medium;
+    color: $color-oldBrick;
   }
 }
